--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@font-face{
+font-face{
     font-family:"RadicalWut";
     src:url("../fonts/radikalwut-bold.ttf")
 }
@@ -49,6 +49,262 @@
 .navbar a:hover, .navbar p:hover{
     color:#008ae6;
     white-space:nowrap;
+}
+.navbar ul{
+    padding:0;
+}
+.navbar ul li {
+    position:relative;
+    float: left;
+    list-style: none;
+}
+.navbar ul li:focus-within > ul,
+.navbar ul li:hover > ul{
+    display: initial;
+}
+.navbar ul li a{
+    padding: 20px;
+    padding-left:40px; padding-right:40px;
+    font-size: 22px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+    color:#f5f5f5;
+    display: block;
+}
+
+.navbar ul li a:not([href]){
+    color:#f5f5f5;
+}
+.navbar ul li a:focus-within,
+.navbar ul li a:hover{
+    transition-duration: 0.5s;
+    background-color: rgb(0, 0, 0);
+}
+.navbar ul li a:has(+ ul li a:focus-within),
+.navbar ul li a:has(+ ul li a:hover){
+    color: #007bff;
+    background-color: rgb(0, 0, 0);
+}
+.navbar ul li a:hover > .fa-chevron-circle-right,
+.navbar ul li a:focus-within > .fa-chevron-circle-right{
+    transform: rotate(90deg);
+    color: #007bff;
+    transition-duration: 0.5s;
+}
+.navbar ul li a:has(+ ul li a:focus-within) > .fa-chevron-circle-right,
+.navbar ul li a:has(+ ul li a:hover) > .fa-chevron-circle-right{
+    transform: rotate(90deg);
+    color: #007bff;
+    transition-duration: 0.5s;
+    
+}
+.navbar ul li a > .fa-chevron-circle-right{
+    transition-duration: 0.5s;
+    color:#f5f5f5;
+}
+.navbar ul li ul{
+    position:absolute;
+    display: none;
+    background-color: rgb(0, 0, 0);
+    left:0;
+    width:100%;
+}
+.navbar ul li ul li{
+    width:100%;
+    line-height: 1;
+    border-top: 2px solid rgb(255, 255, 255);
+    
+}
+.navbar ul li ul li a{
+    font-size:18px;
+    text-align: center;
+    z-index:1001;
+}
+.navbar ul li ul li a:hover{
+    background-color: rgba(39, 39, 39, 1);
+    
+}
+/* mobilny navbar */
+.container{
+    width:100%;
+}
+.nav-toggle {
+    display: none;
+    position: absolute;
+    right: 1rem;
+    top: 1.5rem;
+    cursor: pointer;
+    top: 15%;
+    font-size: 40px;
+    color: #fff;
+}
+.nav-toggle{
+    right:10%;
+    width: 1.5rem;
+    transition: 300ms all ease;
+}
+.nav-toggle:hover {
+    color:#008ae6;
+}
+.open {
+    height: 90vh;
+    overflow-y: scroll;
+}
+.hidden {
+    display: none;
+}
+@media (max-width:991px){
+    .header{
+        height:110px
+    }
+    .logo a img{
+        width:65px;
+        height:65px
+    }
+    .navbar ul li a, .navbar p{
+        padding:10px 25px;
+        font-size:20px
+    }
+    .navbar ul li ul li a{
+        font-size: 18px;
+        padding: 8px;
+    }
+    .header .container{
+        margin: auto, 0px;
+    }
+}
+@media (max-height: 740px){
+    .open ul li a{
+        font-size: 20px;
+    }
+    .open ul li ul li a{
+        font-size: 15px;
+        padding: 5px;
+    }
+    .open > ul > li{
+        padding-bottom: 10px;
+    }
+}
+@media (min-height: 1000px){
+    .open ul li a{
+        font-size: 30px;
+    }
+    .open ul li ul li a{
+        font-size: 20px;
+        padding: 10px;
+    }
+}
+@media (max-width: 870px){
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    nav {
+        height: 0;
+        width: 100%;
+        overflow: hidden;
+        transition: 250ms height ease-in-out;
+    }
+    .fa-chevron-circle-right{
+        transform: rotate(90deg);
+    }
+    .navbar a, .navbar ul li a, .navbar ul li a > .fa-chevron-circle-right {
+        color:#000
+    }
+    .navbar ul li {
+        display: block;
+        text-align: center;
+    }
+    .nav-toggle {
+        display: block;
+    }
+    .header{
+        height:90px
+    }
+    .logo a img{
+        width:50px;
+        height:50px
+    }
+    .navbar label{
+        display: initial;
+    }
+    .navbar{
+        position: absolute;
+        width:100%;
+        top:100%;
+        left:0;
+        background-color: #ffffff;
+    }
+    .navbar > ul > li{
+        width:100%;
+        padding-bottom:30px;
+    }
+    .navbar > ul > li:first-child{
+        margin-top:25px;
+    }
+    .navbar > ul > li > ul{
+        position: relative;
+        display: initial;
+        width:100%;
+    }
+    .navbar ul li ul li{
+        position: relative;
+        width:100%;
+    }
+    .navbar ul li a:not([href]), .navbar a:not([href]){
+        color:#000000;
+    }
+}@font-face{
+    font-family:"RadicalWut";
+    src:url("../fonts/radikalwut-bold.ttf")
+}
+.header{
+    position:fixed;
+    top:0;
+    right:0;
+    left:0;
+    z-index:997;
+    -webkit-transition:all 0.5s;
+    transition:all 0.5s;
+    padding:20px 0;
+    background:rgba(0,0,0,0.9);
+    width:100vw;
+    height:140px;
+}
+.header__wrapper{
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-pack:justify;
+    -ms-flex-pack:justify;
+    justify-content:space-between;
+    -webkit-box-align:center;
+    -ms-flex-align:center;
+    align-items:center
+}
+.header-scrolled{
+    -webkit-box-shadow:0px 2px 15px rgba(0,0,0,0.1);
+    box-shadow:0px 2px 15px rgba(0,0,0,0.1);
+    padding:12px 0
+}
+.logo img{
+    display:block;
+    width:100px;
+    height:100px
+}
+/* navbar */
+.navbar{
+    padding:0;
+    font-weight: bold;
+    float: right;
+}
+.navbar a:not([href]){
+    color:#f5f5f5;
+}
+.navbar a:hover:not([href]),
+.navbar a:hover, .navbar p:hover{
+    color:#008ae6;
+    white-space: normal;
 }
 .navbar ul{
     padding:0;
