--- a/layouts/index.html
+++ b/layouts/index.html
@@ -331,6 +331,9 @@
         <a href="https://dps-software.pl/" target="_blank" class=" sponsor sponsor--small">
           <img src="/images/dps-software-logo.png" alt="DPS Software logo" />
         </a>
+        <a href="https://www.gov.pl/web/nauka/program-studenckie-kola-naukowe-tworza-innowacje" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/sponsorzy/mein_studenckie_kola_naukowe_tworza_innowacje_logo.jpg" alt="SKNTI logo" />
+        </a>
       </div>
 
       <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300">
