--- a/layouts/index.html
+++ b/layouts/index.html
@@ -214,7 +214,7 @@
         <div class="authorities__content-block">
           <div data-aos="fade-up" class="authorities__position">Prezes</div>
           <div data-aos="fade-up" data-aos-delay="100" class="authorities__name">
-            Dominik Chmielak
+            inż. Dominik Chmielak
           </div>
           <div data-aos="fade-up" data-aos-delay="200">
             <a href="mailto:dominik.chmielak.stud@pw.edu.pl" class="authorities__contacts-item">
