dodanie zalet i zmiana wizualna artykulow

--- a/layouts/article/single.html
+++ b/layouts/article/single.html
@@ -4,6 +4,9 @@
   <div class="project-start__text">
     <div class="project-start__title">{{.Title}}</div>
   </div>
+  <div class="project-start__item">
+    <img src="{{ .Params.main_project_image }}" alt="hal" />
+  </div>
 </section>
 <section class="project">
   <div class="project__triangle">
