--- a/layouts/index.html
+++ b/layouts/index.html
@@ -272,6 +272,11 @@
         </a>
 
       </div>
+        <div class="sponsor_row" data-aos="fade-up" data-aos-delay="150">
+        <a href="https://www.lockheedmartin.com/pl-pl/index.html" target="_blank" class="sponsor">
+          <img src="/images/sponsorzy/LM-logo-Blue.png" alt="Lockheed Martin logo"  style="width: 50%;"/>
+        </a>
+
       <div class="sponsor_row" data-aos="fade-up" data-aos-delay="150">
         <a href="https://www.vwfs.pl" target="_blank" class="sponsor sponsor--big">
           <img src="/images/sponsorzy/vwfs.png" alt="VWFS logo" />
