Dodany przesuwany panel na sponsorów

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -355,6 +355,45 @@
           <img src="/images/symkon-logo-420x280.png" alt="Symkom logo" />
         </a>
       </div>
+      <div data-aos="fade-up" class="sponsors__title">Zaufali nam:</div>
+      <div class="sponsors__slider">
+        <a href="https://botland.com.pl/pl/" target="_blank" class="sponsor sponsor--small">
+          <img src="/images/botland.png" alt="Botland logo" />
+        </a>
+        <a href="https://www.altium.com/" target="_blank" class="sponsor sponsor--small">
+          <img src="/images/thumbnail_altium_logo_blk.png" alt="Altium logo" />
+        </a>
+        <a href="https://tme.eu/" target="_blank" class="sponsor sponsor--small">
+          <img src="/images/tme_logo.png" alt="TME logo" />
+        </a>
+        <a href="https://symkom.pl/" target="_blank" class="sponsor sponsor--small">
+          <img src="/images/symkon-logo-420x280.png" alt="Symkom logo" />
+        </a>
+        <a href="https://www.st.com/content/st_com/en.html" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/stm.png" alt="ST Microelectronics logo" />
+        </a>
+        <a href="https://dps-software.pl/" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/dps-software-logo.png" alt="DPS Software logo" />
+        </a>
+        <a href="https://astronika.pl/" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/sponsorzy/Astronika-logo-RGB.png" alt="Astronika logo" />
+        </a>
+        <a href="https://fundacjappl.pl/" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/sponsorzy/PPL.png" alt="PPL logo" />
+        </a>
+        <a href="https://pcosa.com.pl/pl" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/sponsorzy/PCO-logo-RGB.png" alt="PCO logo" />
+        </a>
+        <a href="https://addit.pl/pl/" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/addit.png" alt="Addit logo" />
+        </a>
+        <a href="https://www.maxongroup.com/en" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/Maxon_logo.png" alt="maxon logo" />
+        </a>
+        <a href="https://www.elka.pw.edu.pl/" target="_blank" class="sponsor sponsor--small">
+          <img src="/images/sponsorzy/WEiTI_PW_sygnet_PL_czarny.png" alt="Wydzial WEITI logo" />
+        </a>
+      </div> 
       <div class="sponsors__contact">
         <p>Chcesz z nami współpracować? Napisz do nas na mail:
           <a href="mailto:knr@pw.edu.pl">knr@pw.edu.pl</a>
