dodanie Cubic Inch

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -312,17 +312,14 @@
         <a href="https://astronika.pl/" target="_blank" class=" sponsor sponsor--small">
           <img src="/images/sponsorzy/Astronika-logo-RGB.png" alt="Astronika logo" />
         </a>
-        <a href="https://fundacjappl.pl/" target="_blank" class=" sponsor sponsor--medium">
-          <img src="/images/sponsorzy/PPL.png" alt="PPL logo" />
+        <a href="https://cubicinch.pl/" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/sponsorzy/CubicInch_logo_1_RGB_art.png" alt="Cubic Inch logo" />
         </a>
         <a href="https://pcosa.com.pl/pl" target="_blank" class=" sponsor sponsor--small">
           <img src="/images/sponsorzy/PCO-logo-RGB.png" alt="PCO logo" />
         </a>
         <a href="https://addit.pl/pl/" target="_blank" class=" sponsor sponsor--small">
           <img src="/images/addit.png" alt="Addit logo" />
-        </a>
-        <a href="https://www.maxongroup.com/en" target="_blank" class=" sponsor sponsor--small">
-          <img src="/images/Maxon_logo.png" alt="maxon logo" />
         </a>
         <a href="https://www.elka.pw.edu.pl/" target="_blank" class="sponsor sponsor--medium">
           <img src="/images/sponsorzy/WEiTI_PW_sygnet_PL_czarny.png" alt="Wydzial WEITI logo" />
@@ -339,6 +336,11 @@
         <a href="https://www.gov.pl/web/nauka/program-studenckie-kola-naukowe-tworza-innowacje" target="_blank" class=" sponsor sponsor--small">
           <img src="/images/sponsorzy/mein_studenckie_kola_naukowe_tworza_innowacje_logo.jpg" alt="SKNTI logo" />
         </a>
+         <a href="https://www.maxongroup.com/en" target="_blank" class=" sponsor sponsor--small">
+          <img src="/images/Maxon_logo.png" alt="maxon logo" />
+        </a>
+      
+        
       </div>
 
       <div class="sponsor_row" data-aos="fade-up" data-aos-delay="300">
